--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,6 @@
     <title>JS Basics</title>
   </head>
   <body>
-    <header class="header">
-      <h1>JS Basics</h1>
-    </header>
-    <main class="grid content">
-      <section class="string-builder" id="string-builder">
-        <header>
-          <h2>String Builder</h2>
-        </header>
-      </section>
-
-      <section class="boxes" id="boxes">
-        <header>
-          <h2>Boxes</h2>
-        </header>
-      </section>
-
-      <section class="pixels" id="pixels">
-        <header>
-          <h2>Pixels</h2>
-        </header>
-      </section>
-    </main>
+    <div id="root"></div>
   </body>
 </html>
